# VocabStack

./: .gitignore  ARQUITETURA.md  ORGANIZATION.md  README.md  README_TESTES.md  TESTES.md  TESTING_NEXT_STEPS.md  TEST_FINAL_STATUS.md  TEST_IMPLEMENTATION_SUMMARY.md  index.html  main_api.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  routes.py
app/core/: __init__.py
app/db/: __init__.py  database.py
app/models/: __init__.py
app/services/: __init__.py  processors.py
app/utils/: __init__.py  readers.py
data/: vocabstack.db
docs/testes/: INDEX.md
tests/: conftest.py  test_api.py  test_db.py  test_integration.py  test_services.py  test_utils.py
